k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medaudit
  labels:
    name: medaudit
    environment: production
